--- a/springmvc-base/springmvc-base-xml/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-base/springmvc-base-xml/src/main/webapp/WEB-INF/web.xml
@@ -6,19 +6,19 @@
     http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
   <servlet>
-    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-name>springMVCDispatcherServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <!-- 初始化参数 -->
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>/WEB-INF/dispatcherServlet-servlet.xml</param-value>
+      <param-value>classpath:spring-mvc.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <!-- 拦截所有以do结尾的请求 -->
   <servlet-mapping>
-    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-name>springMVCDispatcherServlet</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 
