--- a/springmvc-base/pom.xml
+++ b/springmvc-base/pom.xml
@@ -106,11 +106,18 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- jstl标准标签库依赖 -->
     <dependency>
       <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
       <version>${standard.version}</version>
     </dependency>
+
+      <dependency>
+          <groupId>jstl</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
+      </dependency>
   </dependencies>
   <!-- Maven打包插件 -->
   <build>
