--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
-  <name>SpringMVC-Study</name>
+  <name>springmvc-study</name>
 
   <!-- 模块 -->
   <modules>
