--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <groupId>com.lanhuigu</groupId>
-  <artifactId>springmvc-study</artifactId>
+  <artifactId>thinking-in-springmvc</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
-  <name>springmvc-study</name>
+  <name>thinking-in-springmvc</name>
 
   <!-- 模块 -->
   <modules>
