--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <groupId>com.lanhuigu</groupId>
+  <groupId>com.jpeony</groupId>
   <artifactId>thinking-in-springmvc</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modelVersion>4.0.0</modelVersion>
@@ -11,8 +11,8 @@
 
   <!-- 模块 -->
   <modules>
-    <module>springmvc-base-xml</module>
-    <module>springmvc-base-annotation</module>
+    <module>springmvc-xml</module>
+    <module>springmvc-annotation</module>
   </modules>
 
   <!-- 版本 -->
